fix(components): fix label alignment of FlipRadio component

--- a/packages/swirl-components/src/components/flip-radio/flip-radio.css
+++ b/packages/swirl-components/src/components/flip-radio/flip-radio.css
@@ -129,6 +129,7 @@
 .radio__label-container {
   display: inline-flex;
   margin-left: var(--s-space-3);
+  padding-top: 0.1875rem;
   flex-direction: column;
 }
 
